# challenge-rewards-engine

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  explain.md  plan.md  render.yaml
.github/workflows/: drain-worker.yml  seed-db.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0756281222f3_baseline.py  a7f3e91c2d05_rewards_and_challenge_period.py  c1cf4340c3f3_add_users_table.py  d2d29db3cc1e_events_jobs_outbox.py  d3a1f9b2c7e4_forum_domain_and_events.py  f6a2c8d4e1b3_challenges_and_progress.py
backend/app/: main.py  worker.py
backend/app/api/: admin_challenges.py  auth.py  challenges.py  deps.py  events.py  health.py  posts.py  users.py
backend/app/core/: config.py  db.py  errors.py  middleware.py  rate_limit.py  responses.py  security.py
backend/app/models/: __init__.py  base.py  challenge.py  comment.py  event.py  job.py  post.py  progress.py  reward.py  user.py
backend/app/schemas/: auth.py  challenges.py  events.py  posts.py  progress.py  rewards.py
backend/app/scripts/: seed.py  smoke_test.py
backend/app/services/: evaluator.py  events.py  rewards.py  strategies.py
backend/tests/: conftest.py  test_admin_challenges.py  test_auth.py  test_errors.py  test_evaluator.py  test_events.py  test_health.py  test_posts.py  test_rate_limit.py  test_rewards.py  test_strategies.py  test_worker.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/admin/: layout.tsx
frontend/src/app/(app)/admin/challenges/: page.tsx
frontend/src/app/(app)/admin/challenges/[id]/edit/: page.tsx
frontend/src/app/(app)/admin/challenges/new/: page.tsx
frontend/src/app/(app)/challenges/: page.tsx
frontend/src/app/(app)/feed/: page.tsx
frontend/src/app/(app)/posts/[id]/: page.tsx
frontend/src/app/(app)/posts/new/: page.tsx
frontend/src/app/(app)/profile/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/components/: aurora-background.tsx  error-boundary.tsx  health-check.tsx  theme-toggle.tsx  weekly-challenge-widget.tsx
frontend/src/components/admin/: challenge-form.tsx
frontend/src/components/shell/: app-shell.tsx  sidebar.tsx
frontend/src/components/ui/: dialog.tsx  native-select.tsx  progress.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: use-admin-challenge-mutations.ts  use-admin-challenges.ts  use-create-post.ts  use-feed-params.ts  use-weekly-challenge.ts
frontend/src/lib/: admin-challenges-api.ts  api.ts  auth-api.ts  auth-context.tsx  challenges-api.ts  config.ts  posts-api.ts  progress-api.ts  rewards-api.ts  utils.ts
