[project]
name = "challenge-rewards-engine"
version = "0.1.0"
description = "Async event -> evaluate -> reward engine, decoupled from the forum frontend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "email-validator>=2.2",
    # `zoneinfo` (used for forum-TZ streak-day bucketing) has no bundled tz
    # database on Windows and on slim Linux images (e.g. python:3.12-slim) —
    # this is the portable fallback the stdlib looks for automatically.
    "tzdata>=2024.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The session-scoped `_schema` fixture (tests/conftest.py) creates the async
# engine on the first test's event loop; `app/core/db.py` then caches that
# engine/pool as a process-global singleton. Without this, pytest-asyncio's
# default per-function event loop means every later test tries to reuse
# pooled connections bound to a loop that's already gone ("Future attached
# to a different loop"). Session-scoping the loop keeps engine and tests on
# the same loop for the whole run.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
